track now works, style hack for IE10 notifications